--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="book__form">
                             <div class="u-margin-bottom-medium">
                                 <h2 class="heading-secondary">
-                                    Start booking now
+                                    Start booking now!
                                 </h2>
                             </div>
                             <form action="#" class="form">
