Building the Popup Pt. 1

--- a/index.html
+++ b/index.html
@@ -439,6 +439,27 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary u-margin-bottom-small">
+                        Start Booking Now!
+                    </h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Important &ndash; Please read these terms before booking.
+                    </h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, non dolorem, maiores officiis voluptates excepturi recusandae illum quo nostrum temporibus, inventore nam nulla ea rem facere quae voluptatibus sit ullam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem veniam delectus velit error fuga earum ab quae. Eos voluptates veritatis provident consequatur nihil? Numquam rem mollitia obcaecati perferendis laboriosam.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
         
     </body>
 </html>
