--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         is where life happens
                     </span>
                 </h1>
-                <a href="#" class="btn btn--white btn--animated">
+                <a href="#section-tours" class="btn btn--white btn--animated">
                     Discover our tours!
                 </a>
             </div>
@@ -167,7 +167,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -206,7 +206,7 @@
                                             $297
                                         </p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -242,7 +242,7 @@
                                             $497
                                         </p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -278,7 +278,7 @@
                                             $897
                                         </p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -440,13 +440,16 @@
             </div>
         </footer>
 
-        <div class="popup">
+        <div class="popup" id="popup">
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
                     <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
                 </div>
                 <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">
+                        &times;
+                    </a>
                     <h2 class="heading-secondary u-margin-bottom-small">
                         Start Booking Now!
                     </h2>
