--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
             <nav class="navigation__nav">
                 <ul class="navigation__list">
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
+                        <a href="#section-about" class="navigation__link">
                             <span>01</span>
                             About Natours
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
+                        <a href="#section-features" class="navigation__link">
                             <span>02</span>
                             Your Benefits
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
+                        <a href="#section-tours" class="navigation__link">
                             <span>03</span>
                             Popular Tours
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
+                        <a href="#section-stories" class="navigation__link">
                             <span>04</span>
                             Stories
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link">
+                        <a href="#section-book" class="navigation__link">
                             <span>05</span>
                             Book Now
                         </a>
@@ -79,7 +79,7 @@
         </header>
 
         <main>
-            <section class="section-about">
+            <section class="section-about" id="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
@@ -115,7 +115,7 @@
                 </div>
             </section>
 
-            <section class="section-features">
+            <section class="section-features" id="section-features">
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -289,7 +289,7 @@
                 </div>
             </section>
 
-            <section class="section-stories">
+            <section class="section-stories" id="section-stories">
                 <div class="bg-video">
                     <video class="bg-video__content" autoplay muted loop>
                         <source src="img/video.mp4" type="video/mp4">
@@ -345,7 +345,7 @@
                 </div>
             </section>
 
-            <section class="section-book">
+            <section class="section-book" id="section-book">
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
@@ -459,7 +459,7 @@
                     <p class="popup__text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, non dolorem, maiores officiis voluptates excepturi recusandae illum quo nostrum temporibus, inventore nam nulla ea rem facere quae voluptatibus sit ullam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non autem veniam delectus velit error fuga earum ab quae. Eos voluptates veritatis provident consequatur nihil? Numquam rem mollitia obcaecati perferendis laboriosam.
                     </p>
-                    <a href="#" class="btn btn--green">Book now</a>
+                    <a href="#section-book" class="btn btn--green">Book now</a>
                 </div>
             </div>
         </div>
